202X-XX-XX v. 2.99.1
--------------------
- Fixed signal handling on reload daemon to avoid org.freedesktop.DBus.Error.LimitsExceeded
- Fixed Typo on helpinfo, see issue #247 (thanks papoteur and yurchor)
- Fixed dnfdragora-updater dnfdaemon dependency. Issue #246
- Added back Glib.MainLoop in thread to manage dbus timeout and long transaction better
- Remove hawkey and dnf dependencies (thanks huakim)
- Restored "Show newest packages only" search option. Now works with reg exp also
- Added Fuzzy Search option that adds wild characther * to input (legacy dnf4 behaviour)
- Added a menu "Actions" to choose action to be perform by pressing "apply button"
- Implemented Downgrade, Reinstall, DistroSync. Issue #242
- Added signal transaction_elem_progress management

2024-12-29 v. 2.99.0
--------------------
- Port to dnf5daemon

2023-11-25 v. 2.1.5
-------------------
- Fixed Segfault error when there is no package description. Thanks to Petr Leliaev
- Added Info window after transaction. Thanks to Petr Leliaev

2023-01-15 v. 2.1.4
-------------------
- Fixed #177 "size sorting is broken". Thanks to Nicolas Thierry-Mieg 
- Removed "failovermethod" from repo information, not available any more

2022-10-02 v. 2.1.3
--------------------
- Changed widget weight to avoid wrong behavior and resizing limitations (see
  issue #206, issue #207 and https://github.com/libyui/libyui-gtk/issues/83)
- Added logging info if metadata have to be downloaded (expiration time)
  Note that MetaData update_interval <= 0 means disabling check as well as
  if dnf-makecache.timer is enabled
- Fixed clicking to the right of checkboxes wrong behaviour (issue #203)
- Escape description text before showing as package information (issue #191)

2021-10-24 v. 2.1.2
---------------------
- Fixed wrong access to manatools.service module (issue #202)
- Fixed issue #189 "No line break to fit the width of the window in dnfdragora"

2021-01-06 v. 2.1.1
---------------------
- Updated translations